// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex justify-center items-center w-full select-none"
        >
          <button
            aria-disabled="true"
            class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
            disabled=""
          >
            Previous
          </button>
          <nav
            aria-label="pagination"
            class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
          >
            <a
              aria-label="page 1"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
              tabindex="0"
            >
              1
            </a>
            <a
              aria-label="page 2"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              2
            </a>
            <a
              aria-label="page 3"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              3
            </a>
            <span
              class="truncable flex justify-center min-w-[2rem]"
            >
              ...
            </span>
            <a
              aria-label="page 11"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              11
            </a>
          </nav>
          <button
            aria-disabled="false"
            class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex justify-center items-center w-full select-none"
      >
        <button
          aria-disabled="true"
          class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
          disabled=""
        >
          Previous
        </button>
        <nav
          aria-label="pagination"
          class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
        >
          <a
            aria-label="page 1"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
            tabindex="0"
          >
            1
          </a>
          <a
            aria-label="page 2"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            2
          </a>
          <a
            aria-label="page 3"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            3
          </a>
          <span
            class="truncable flex justify-center min-w-[2rem]"
          >
            ...
          </span>
          <a
            aria-label="page 11"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            11
          </a>
        </nav>
        <button
          aria-disabled="false"
          class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
        >
          Next
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pagination in RTL renders WithButtons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex justify-center items-center w-full select-none"
        >
          <div
            aria-disabled="true"
            class=""
            disabled=""
          >
            <button
              class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 opacity-30 cursor-not-allowed btn-secondary text-moon-24"
              disabled=""
              type="button"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 25L11.5 16L20.5 7"
                  stroke="black"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
          <nav
            aria-label="pagination"
            class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
          >
            <a
              aria-label="page 1"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
              tabindex="0"
            >
              1
            </a>
            <a
              aria-label="page 2"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              2
            </a>
            <a
              aria-label="page 3"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              3
            </a>
            <span
              class="truncable flex justify-center min-w-[2rem]"
            >
              ...
            </span>
            <a
              aria-label="page 26"
              class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
              tabindex="0"
            >
              26
            </a>
          </nav>
          <div
            aria-disabled="false"
            class=""
          >
            <button
              class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-secondary text-moon-24"
              type="button"
            >
              <svg
                class="rtl:rotate-180"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 7L20.5 16L11.5 25"
                  stroke="black"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <span
                aria-hidden="true"
                class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex justify-center items-center w-full select-none"
      >
        <div
          aria-disabled="true"
          class=""
          disabled=""
        >
          <button
            class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 opacity-30 cursor-not-allowed btn-secondary text-moon-24"
            disabled=""
            type="button"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 25L11.5 16L20.5 7"
                stroke="black"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
        <nav
          aria-label="pagination"
          class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
        >
          <a
            aria-label="page 1"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
            tabindex="0"
          >
            1
          </a>
          <a
            aria-label="page 2"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            2
          </a>
          <a
            aria-label="page 3"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            3
          </a>
          <span
            class="truncable flex justify-center min-w-[2rem]"
          >
            ...
          </span>
          <a
            aria-label="page 26"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            26
          </a>
        </nav>
        <div
          aria-disabled="false"
          class=""
        >
          <button
            class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-secondary text-moon-24"
            type="button"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="black"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pagination renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-center items-center w-full select-none"
      >
        <button
          aria-disabled="true"
          class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
          disabled=""
        >
          Previous
        </button>
        <nav
          aria-label="pagination"
          class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
        >
          <a
            aria-label="page 1"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
            tabindex="0"
          >
            1
          </a>
          <a
            aria-label="page 2"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            2
          </a>
          <a
            aria-label="page 3"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            3
          </a>
          <span
            class="truncable flex justify-center min-w-[2rem]"
          >
            ...
          </span>
          <a
            aria-label="page 11"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            11
          </a>
        </nav>
        <button
          aria-disabled="false"
          class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
        >
          Next
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-center items-center w-full select-none"
    >
      <button
        aria-disabled="true"
        class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
        disabled=""
      >
        Previous
      </button>
      <nav
        aria-label="pagination"
        class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
      >
        <a
          aria-label="page 1"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
          tabindex="0"
        >
          1
        </a>
        <a
          aria-label="page 2"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          2
        </a>
        <a
          aria-label="page 3"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          3
        </a>
        <span
          class="truncable flex justify-center min-w-[2rem]"
        >
          ...
        </span>
        <a
          aria-label="page 11"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          11
        </a>
      </nav>
      <button
        aria-disabled="false"
        class="moon-disabled:cursor-not-allowed moon-disabled:opacity-30"
      >
        Next
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Pagination renders WithButtons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex justify-center items-center w-full select-none"
      >
        <div
          aria-disabled="true"
          class=""
          disabled=""
        >
          <button
            class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 opacity-30 cursor-not-allowed btn-secondary text-moon-24"
            disabled=""
            type="button"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.5 25L11.5 16L20.5 7"
                stroke="black"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
        <nav
          aria-label="pagination"
          class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
        >
          <a
            aria-label="page 1"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
            tabindex="0"
          >
            1
          </a>
          <a
            aria-label="page 2"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            2
          </a>
          <a
            aria-label="page 3"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            3
          </a>
          <span
            class="truncable flex justify-center min-w-[2rem]"
          >
            ...
          </span>
          <a
            aria-label="page 26"
            class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
            tabindex="0"
          >
            26
          </a>
        </nav>
        <div
          aria-disabled="false"
          class=""
        >
          <button
            class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-secondary text-moon-24"
            type="button"
          >
            <svg
              class="rtl:rotate-180"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 7L20.5 16L11.5 25"
                stroke="black"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              aria-hidden="true"
              class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex justify-center items-center w-full select-none"
    >
      <div
        aria-disabled="true"
        class=""
        disabled=""
      >
        <button
          class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 opacity-30 cursor-not-allowed btn-secondary text-moon-24"
          disabled=""
          type="button"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.5 25L11.5 16L20.5 7"
              stroke="black"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            aria-hidden="true"
            class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
      <nav
        aria-label="pagination"
        class="flex gap-1 items-center justify-center w-full h-10 text-sm flex-grow"
      >
        <a
          aria-label="page 1"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-goten bg-piccolo"
          tabindex="0"
        >
          1
        </a>
        <a
          aria-label="page 2"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          2
        </a>
        <a
          aria-label="page 3"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          3
        </a>
        <span
          class="truncable flex justify-center min-w-[2rem]"
        >
          ...
        </span>
        <a
          aria-label="page 26"
          class="flex items-center justify-center cursor-pointer w-8 h-8 rounded-moon-s-sm focus:outline-none text-bulma hover:bg-jiren focus:bg-jiren"
          tabindex="0"
        >
          26
        </a>
      </nav>
      <div
        aria-disabled="false"
        class=""
      >
        <button
          class="h-8 p-1 gap-1 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-secondary text-moon-24"
          type="button"
        >
          <svg
            class="rtl:rotate-180"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.5 7L20.5 16L11.5 25"
              stroke="black"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            aria-hidden="true"
            class="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
